Update .env.example to include Local LLM API Key and OAuth refresh token

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,13 @@ TWITCH_USERNAME=your_bot_username
 # OAuth token for your bot (get from https://twitchapps.com/tmi/)
 # Must start with "oauth:"
 TWITCH_OAUTH_TOKEN=oauth:your_oauth_token_here
+TWITCH_OAUTH_REFRESH=your_refresh_token_here
 
 # Comma-separated list of channels to join (without #)
 TWITCH_CHANNELS=channel1,channel2
 
 # Enable debug mode (true/false)
 DEBUG=false
+
+# Local LLM API Key
+LOCALLLM_API_KEY=your_localllm_api_key_here
